--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             flex-direction: column;
             align-items: flex-start;
             gap: 8px;
+            margin: 184px;
         }
 
         h1 {
