--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
         .container {
             display: flex;
-            width: 1072px;
+            max-width: 1072px;
+            min-width: auto;
             flex-direction: column;
             align-items: flex-start;
             gap: 8px;
