--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             position: absolute;
             width: 40px;
             height: 40px;
+            transition: transform 1s ease;
+        }
+
+        .star:hover {
+            transform: rotate(360deg);
         }
 
         .top-left {
@@ -46,12 +51,13 @@
 
         .container {
             display: flex;
+            width: 100%;
             max-width: 1072px;
             min-width: auto;
             flex-direction: column;
             align-items: flex-start;
             gap: 8px;
-            margin: 184px;
+            padding: 0 48px;
         }
 
         h1 {
@@ -61,9 +67,7 @@
             font-size: 72px;
             font-family: Abril Fatface;
             margin: 0px;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 1;
+
         }
 
         p {
@@ -86,6 +90,25 @@
             font-family: Libre Baskerville;
             font-style: italic;
             line-height: 130%;
+        }
+
+        /* Media Queries */
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 48px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 36px;
+            }
+
+            p,
+            .countdown,
+            .message {
+                font-size: 16px;
+            }
         }
     </style>
 </head>
