--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="countdown fade-in">
             <span>Time remaining until my birthday: </span><span id="countdown"></span>
         </p>
-        <p class="attribution fade-in">(c) 2023 George Petkevich</p>
+        <p class="attribution fade-in">(c) 2023 George Petkevich v1.3</p>
     </div>
 
     <svg class="star top-left fade-in" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
