--- a/index.html
+++ b/index.html
@@ -17,8 +17,32 @@
         <p class="countdown fade-in">
             <span>Time remaining until my birthday: </span><span id="countdown"></span>
         </p>
-        <p class="attribution fade-in">(c) 2023 George Petkevich v1.3</p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/prosto_gasha" target="_blank">
+                <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <use xlink:href="svg/icon/instagram.svg"></use>
+                </svg>
+            </a>
+            <a href="https://discord.com/users/gasha337" target="_blank">
+                <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <use xlink:href="svg/icon/discord.svg"></use>
+                </svg>
+            </a>
+            <a href="https://t.me/gasha337" target="_blank">
+                <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <use xlink:href="svg/icon/telegram.svg"></use>
+                </svg>
+            </a>
+            <a href="https://inktr.ee/gasha337" target="_blank">
+                <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <use xlink:href="svg/icon/more.svg#d"></use>
+                </svg>
+            </a>
+        </div>
+        <p class="attribution fade-in">(c) 2023 George Petkevich</p>
     </div>
+
+
 
     <svg class="star top-left fade-in" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
         <path
@@ -44,6 +68,7 @@
             fill="#FFBBCC" />
     </svg>
 
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.10.1/tsparticles.confetti.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 
