--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </svg>
             </a>
         </div>
-        <p class="attribution fade-in">(c) 2023 George Petkevich</p>
+        <p class="attribution fade-in">(c) 2023 George Petkevich 2.0</p>
     </div>
 
 
