--- a/index.html
+++ b/index.html
@@ -13,30 +13,27 @@
 
 <body>
     <div class="container">
-        <div class="content-group1">
-            <h1>Countdown to my birthday</h1>
-            <p class="countdown">
-                <span>Time remaining until my birthday: </span><span id="countdown"></span>
-            </p>
-            <span class="contact-info">
-                <span class="contact-info-text">Contact me on:</span>
-                <span class="social-icons">
-                    <a href="https://www.instagram.com/prosto_gasha" target="_blank">
-                        <img class="social-icon" width="24" height="24" src="svg/icon/instagram.svg"
-                            alt="instagram icon">
-                    </a>
-                    <a href="https://discord.com/users/gasha337" target="_blank">
-                        <img class="social-icon" width="24" height="24" src="svg/icon/discord.svg" alt="discord icon">
-                    </a>
-                    <a href="https://t.me/gasha337" target="_blank">
-                        <img class="social-icon" width="24" height="24" src="svg/icon/telegram.svg" alt="telegram icon">
-                    </a>
-                    <a href="https://inktr.ee/gasha337" target="_blank">
-                        <img class="social-icon" width="24" height="24" src="svg/icon/linktree.svg" alt="linktree icon">
-                    </a>
-                </span>
+        <h1>Countdown to my birthday</h1>
+        <p class="countdown">
+            <span>Time remaining until my birthday: </span><span id="countdown"></span>
+        </p>
+        <span class="contact-info">
+            <span class="contact-info-text">Contact me on:</span>
+            <span class="social-icons">
+                <a href="https://www.instagram.com/prosto_gasha" target="_blank">
+                    <img class="social-icon" width="24" height="24" src="svg/icon/instagram.svg" alt="instagram icon">
+                </a>
+                <a href="https://discord.com/users/gasha337" target="_blank">
+                    <img class="social-icon" width="24" height="24" src="svg/icon/discord.svg" alt="discord icon">
+                </a>
+                <a href="https://t.me/gasha337" target="_blank">
+                    <img class="social-icon" width="24" height="24" src="svg/icon/telegram.svg" alt="telegram icon">
+                </a>
+                <a href="https://inktr.ee/gasha337" target="_blank">
+                    <img class="social-icon" width="24" height="24" src="svg/icon/linktree.svg" alt="linktree icon">
+                </a>
             </span>
-        </div>
+        </span>
 
         <a href="https://github.com/prostogasha/BirthdayCountdown" class="attribution">
             <p>(c) 2023 George Petkevich v2.0</p>
