--- a/index.html
+++ b/index.html
@@ -3,22 +3,35 @@
 
 <head>
     <title>Birthday countdown</title>
+    <link rel="icon" type="image/svg+xml" href="svg/Star.svg">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville:ital@0;1&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="svg/Star.svg">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
         <h1>Countdown to my birthday</h1>
+
         <p class="countdown">
-            <span>Time remaining until my birthday: </span><span id="countdown"></span>
+            <span>Time remaining until my birthday: </span>
+
+            <span id="countdown"><b>
+                    <span id="days"></span> <span id="days-text"></span>,
+                    <span id="hours"></span> <span id="hours-text"></span>,
+                    <span id="minutes"></span> <span id="minutes-text"></span>,
+                    <span id="seconds"></span> <span id="seconds-text"></span>
+                </b></span>
         </p>
+
         <span class="contact-info">
             <span class="contact-info-text">Contact me on:</span>
+
             <span class="social-icons">
                 <a href="https://www.instagram.com/prosto_gasha" target="_blank">
                     <img class="social-icon" width="24" height="24" src="svg/icon/instagram.svg" alt="instagram icon">
@@ -33,20 +46,25 @@
                     <img class="social-icon" width="24" height="24" src="svg/icon/linktree.svg" alt="linktree icon">
                 </a>
             </span>
+
         </span>
 
         <a href="https://github.com/prostogasha/BirthdayCountdown" class="attribution">
-            <p>(c) 2023 George Petkevich v2.0</p>
+            <p>(c) 2023 George Petkevich v3.0</p>
         </a>
     </div>
 
-    <img class="star top-left" width="40" height="40" src="svg/Star.svg" viewBox="0 0 40 40">
+    <a class="star top-left" href="fullscreenmode.html">
+        <img width="40" height="40" src="svg/Star.svg" viewBox="0 0 40 40">
+    </a>
 
     <img class="star top-right" width="40" height="40" src="svg/Star.svg" viewBox="0 0 40 40">
 
     <img class="star bottom-left" width="40" height="40" src="svg/Star.svg" viewBox="0 0 40 40">
 
-    <img class="star bottom-right" width="40" height="40" src="svg/Star.svg" viewBox="0 0 40 40">
+    <a id="fullscreenButton" class="star bottom-right">
+        <img src="svg/Star.svg" width="40" height="40" alt="Full Screen">
+    </a>
 
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.10.1/tsparticles.confetti.bundle.min.js"></script>
     <script src="script.js"></script>
