--- a/fullscreenmode.html
+++ b/fullscreenmode.html
@@ -14,15 +14,15 @@
 <body>
     <div class="container">
         <span id="countdown" class="countdown-l">
-            <span id="days"></span> <span id="days-text"></span>,
-            <span id="hours"></span> <span id="hours-text"></span>,
+            <span id="days"></span>&nbsp;<span id="days-text"></span>,
+            <span id="hours"></span>&nbsp;<span id="hours-text"></span>,
             <br>
-            <span id="minutes"></span> <span id="minutes-text"></span>,
-            <span id="seconds"></span> <span id="seconds-text"></span>
+            <span id="minutes"></span>&nbsp;<span id="minutes-text"></span>,
+            <span id="seconds"></span>&nbsp;<span id="seconds-text"></span>
         </span>
 
         <a href="https://github.com/prostogasha/BirthdayCountdown" class="attribution">
-            <p>(c) 2023 George Petkevich v3.0</p>
+            <p>(c) 2023 George Petkevich v3.1</p>
         </a>
 
         <a class="star top-left" href="index.html">
