--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Countdown to my birthday</h1>
 
         <p class="countdown">
-            <span>Time remaining until my birthday: </span>
+            <span>Time remaining until my birthday:</span> 
 
             <span id="countdown"><b>
                     <span id="days"></span>&nbsp;<span id="days-text"></span>,
@@ -42,7 +42,7 @@
                 <a href="https://t.me/gasha337" target="_blank">
                     <img class="social-icon" width="24" height="24" src="svg/icon/telegram.svg" alt="telegram icon">
                 </a>
-                <a href="https://inktr.ee/gasha337" target="_blank">
+                <a href="https://linktr.ee/gasha337" target="_blank">
                     <img class="social-icon" width="24" height="24" src="svg/icon/linktree.svg" alt="linktree icon">
                 </a>
             </span>
