--- a/clock.html
+++ b/clock.html
@@ -34,8 +34,8 @@
         <img class="star bottom-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
 
         <span class="control-icons-container">
-            <a class="control-icon" href="main.html" title="Go to the page with the big clock">
-                <img src="resources/svg/icon/back 2.svg" alt="Clock icon">
+            <a class="control-icon" href="index.html" title="Back to home">
+                <img src="resources/svg/icon/back 2.svg" alt=Back icon">
             </a>
 
             <a class="control-icon" id="fullscreenButton" title="Toggle Fullscreen">
