--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <img class="social-icon" width="24" height="24" src="resources/svg/icon/telegram.svg"
                             alt="Telegram icon">
                     </a>
-                    <a href="https://inktr.ee/gasha337" target="_blank">
+                    <a href="https://linktr.ee/gasha337" target="_blank">
                         <img class="social-icon" width="24" height="24" src="resources/svg/icon/lintree.svg"
                             alt="Linktree icon">
                     </a>
