--- a/main.html
+++ b/main.html
@@ -17,14 +17,40 @@
 
     <body>
         <div class="container">
-            <h1>
+            <h2>Countdown to George’s birthday</h2>
+            <p class="countdown-container">
+                <span class="countdown-text">Time remaining until: </span>
                 <span id="countdown" class="countdown-count">
                     <span id="days">0</span>&nbsp;<span id="days-text"></span>, 
-                    <span id="hours">0</span>&nbsp;<span id="hours-text"></span>, <br class="adaptive-br">
+                    <span id="hours">0</span>&nbsp;<span id="hours-text"></span>, 
                     <span id="minutes">0</span>&nbsp;<span id="minutes-text"></span>, 
                     <span id="seconds">0</span>&nbsp;<span id="seconds-text"></span>
                 </span>
-            </h1>
+            </p>
+
+            <span class="socials-container">
+                <span class="socials-text">Join me in celebrating my birthday!</span>
+
+                <span class="social-icons-container">
+                    <a href="https://www.instagram.com/prosto_gasha" target="_blank">
+                        <img class="social-icon" width="24" height="24" src="resources/svg/icon/instagram.svg"
+                            alt="Instagram icon">
+                    </a>
+                    <a href="https://discord.com/users/gasha337" target="_blank">
+                        <img class="social-icon" width="24" height="24" src="resources/svg/icon/discord.svg"
+                            alt="Discord icon">
+                    </a>
+                    <a href="https://t.me/gasha337" target="_blank">
+                        <img class="social-icon" width="24" height="24" src="resources/svg/icon/telegram.svg"
+                            alt="Telegram icon">
+                    </a>
+                    <a href="https://linktr.ee/gasha337" target="_blank">
+                        <img class="social-icon" width="24" height="24" src="resources/svg/icon/lintree.svg"
+                            alt="Linktree icon">
+                    </a>
+                </span>
+
+            </span>
 
         </div>
 
@@ -32,21 +58,15 @@
         <img class="star top-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
         <img class="star bottom-left" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
         <img class="star bottom-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
-
         <span class="control-icons-container">
-            <a class="control-icon" href="main.html" title="Go to the main page">
-                <img src="resources/svg/icon/back 2.svg" alt="Clock icon">
-            </a>
-
-            <a class="control-icon" id="fullscreenButton" title="Toggle Fullscreen">
-                <img id="maximizeIcon" src="resources/svg/icon/maximize.svg" alt="Maximize icon">
+            <a class="control-icon" href="clock.html" title="Go to the page with the big clock">
+                <img src="resources/svg/icon/clock.svg" alt="Clock icon">
             </a>
 
             <a class="control-icon" href="https://github.com/prostogasha/BirthdayCountdown" title="Go to GitHub repository">
                 <img src="resources/svg/icon/github.svg" alt="GitHub icon">
             </a>
         </span>
-
     </body>
 
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.10.1/tsparticles.confetti.bundle.min.js"></script>
