--- a/clock.html
+++ b/clock.html
@@ -6,6 +6,11 @@
         <title>Birthday countdown</title>
         <link rel="icon" type="image/svg+xml" href="resources/svg/star.svg">
 
+        <meta charset="utf-8" name="title">
+        <meta property="og:image" content="resources\images\site_preview_img.png">
+        <meta property="og:image:secure_url" content="resources\images\site_preview_img.png">
+        <meta property="og:description" content="BirthdayCountdown is a simple countdown website to my (George's) birthday.">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
@@ -20,18 +25,14 @@
             <h1>
                 <span id="countdown" class="countdown-count">
                     <span id="days">0</span>&nbsp;<span id="days-text"></span>, 
-                    <span id="hours">0</span>&nbsp;<span id="hours-text"></span>, <br class="adaptive-br">
+                    <span id="hours">0</span>&nbsp;<span id="hours-text"></span>, 
+                    <br class="adaptive-br">
                     <span id="minutes">0</span>&nbsp;<span id="minutes-text"></span>, 
                     <span id="seconds">0</span>&nbsp;<span id="seconds-text"></span>
                 </span>
             </h1>
 
         </div>
-
-        <img class="star top-left" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
-        <img class="star top-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
-        <img class="star bottom-left" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
-        <img class="star bottom-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
 
         <span class="control-icons-container">
             <a class="control-icon" href="main.html" title="Go to the main page">
@@ -46,6 +47,11 @@
                 <img src="resources/svg/icon/github.svg" alt="GitHub icon">
             </a>
         </span>
+
+        <img class="star top-left" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
+        <img class="star top-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
+        <img class="star bottom-left" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
+        <img class="star bottom-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
 
     </body>
 
