--- a/main.html
+++ b/main.html
@@ -6,7 +6,12 @@
         <title>Birthday countdown</title>
         <link rel="icon" type="image/svg+xml" href="resources/svg/star.svg">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <meta charset="utf-8" name="title">
+        <meta property="og:image" content="resources\images\site_preview_img.png">
+        <meta property="og:image:secure_url" content="resources\images\site_preview_img.png">
+        <meta property="og:description" content="BirthdayCountdown is a simple countdown website to my (George's) birthday.">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">у
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
             href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Emoji&display=swap"
@@ -54,10 +59,6 @@
 
         </div>
 
-        <img class="star top-left" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
-        <img class="star top-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
-        <img class="star bottom-left" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
-        <img class="star bottom-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
         <span class="control-icons-container">
             <a class="control-icon" href="clock.html" title="Go to the page with the big clock">
                 <img src="resources/svg/icon/clock.svg" alt="Clock icon">
@@ -67,6 +68,11 @@
                 <img src="resources/svg/icon/github.svg" alt="GitHub icon">
             </a>
         </span>
+
+        <img class="star top-left" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
+        <img class="star top-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
+        <img class="star bottom-left" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
+        <img class="star bottom-right" width="40" height="40" src="resources\svg\star.svg" viewBox="0 0 40 40">
     </body>
 
     <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.10.1/tsparticles.confetti.bundle.min.js"></script>
