--- a/clock.html
+++ b/clock.html
@@ -35,8 +35,8 @@
         </div>
 
         <span class="control-icons-container">
-            <a class="control-icon" href="main.html" title="Go to the main page">
-                <img src="resources/svg/icon/back 2.svg" alt="Clock icon">
+            <a class="control-icon" href="index.html" title="Go to the main page">
+                <img src="resources/svg/icon/back 2.svg" alt="Back icon">
             </a>
 
             <a class="control-icon" id="fullscreenButton" title="Toggle Fullscreen">
