--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
         <link rel="icon" type="image/svg+xml" href="resources/svg/star.svg">
 
         <meta charset="utf-8" name="title">
-        <meta property="og:image" content="resources\images\site_preview_img.png">
-        <meta property="og:image:secure_url" content="resources\images\site_preview_img.png">
+
+        <!-- Open Graph tags -->
+        <meta property="og:title" content="BirthdayCountdown">
         <meta property="og:description" content="BirthdayCountdown is a simple countdown website to my (George's) birthday.">
+        <meta property="og:image" content="https://prostogasha.github.io/BirthdayCountdown/resources/images/site_preview_img.png">
+        <meta property="og:url" content="https://prostogasha.github.io/BirthdayCountdown">
+
+        <!-- Twitter Card tags -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:title" content="BirthdayCountdown">
+        <meta name="twitter:description" content="BirthdayCountdown is a simple countdown website to my (George's) birthday.">
+        <meta name="twitter:image" content="https://prostogasha.github.io/BirthdayCountdown/resources/images/site_preview_img.png">
+        <meta name="twitter:url" content="https://prostogasha.github.io/BirthdayCountdown">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">у
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
