--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <meta name="twitter:image" content="https://prostogasha.github.io/BirthdayCountdown/resources/images/site_preview_img.png">
         <meta name="twitter:url" content="https://prostogasha.github.io/BirthdayCountdown">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">у
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
             href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Emoji&display=swap"
