--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
         <!-- Open Graph tags -->
         <meta property="og:title" content="BirthdayCountdown">
         <meta property="og:description" content="BirthdayCountdown is a simple countdown website to my (George's) birthday.">
-        <meta property="og:image" content="https://prostogasha.github.io/BirthdayCountdown/resources/images/site_preview_img.png">
-        <meta property="og:url" content="https://prostogasha.github.io/BirthdayCountdown">
+        <meta property="og:image" content="https://gsh337.github.io/BirthdayCountdown/resources/images/site_preview_img.png">
+        <meta property="og:url" content="https://gsh337.github.io/BirthdayCountdown">
 
         <!-- Twitter Card tags -->
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="BirthdayCountdown">
         <meta name="twitter:description" content="BirthdayCountdown is a simple countdown website to my (George's) birthday.">
-        <meta name="twitter:image" content="https://prostogasha.github.io/BirthdayCountdown/resources/images/site_preview_img.png">
-        <meta name="twitter:url" content="https://prostogasha.github.io/BirthdayCountdown">
+        <meta name="twitter:image" content="https://gsh337.github.io/BirthdayCountdown/resources/images/site_preview_img.png">
+        <meta name="twitter:url" content="https://gsh337.github.io/BirthdayCountdown">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,7 +74,7 @@
                 <img src="resources/svg/icon/clock.svg" alt="Clock icon">
             </a>
 
-            <a class="control-icon" href="https://github.com/prostogasha/BirthdayCountdown" title="Go to GitHub repository">
+            <a class="control-icon" href="https://github.com/gsh337/BirthdayCountdown" title="Go to GitHub repository">
                 <img src="resources/svg/icon/github.svg" alt="GitHub icon">
             </a>
         </span>
