Replaces Social Media Buttons and Title with Copyright [v 4.5.0]

--- a/clock.html
+++ b/clock.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Birthday countdown</title>
+    <title>BirthdayCountdown</title>
     <link rel="icon" type="image/svg+xml" href="resources/svg/star.svg">
 
     <meta charset="utf-8" name="title">
@@ -56,7 +56,9 @@
                 <span id="seconds">0</span>&nbsp;<span id="seconds-text"></span>
             </span>
         </h1>
-
+        <span class="socials-container">
+            <span class="socials-text">(c) 2023 George Petkevich</span>
+        </span>
     </div>
 
     <span class="control-icons-container">
