--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Birthday countdown</title>
+    <title>BirthdayCountdown</title>
     <link rel="icon" type="image/svg+xml" href="resources/svg/star.svg">
 
     <meta charset="utf-8" name="title">
@@ -59,27 +59,7 @@
         </p>
 
         <span class="socials-container">
-            <span class="socials-text">Join me in celebrating my birthday!</span>
-
-            <span class="social-icons-container">
-                <a href="https://www.instagram.com/prosto_gasha" target="_blank">
-                    <img class="social-icon" width="24" height="24" src="resources/svg/icon/instagram.svg"
-                        alt="Instagram icon">
-                </a>
-                <a href="https://discord.com/users/gasha337" target="_blank">
-                    <img class="social-icon" width="24" height="24" src="resources/svg/icon/discord.svg"
-                        alt="Discord icon">
-                </a>
-                <a href="https://t.me/gasha337" target="_blank">
-                    <img class="social-icon" width="24" height="24" src="resources/svg/icon/telegram.svg"
-                        alt="Telegram icon">
-                </a>
-                <a href="https://linktr.ee/gasha337" target="_blank">
-                    <img class="social-icon" width="24" height="24" src="resources/svg/icon/lintree.svg"
-                        alt="Linktree icon">
-                </a>
-            </span>
-
+            <span class="socials-text">(c) 2023 George Petkevich</span>
         </span>
 
     </div>
